# openflag

./: .env.example  .gitignore  README.md  docker-compose.yml  go.mod  go.sum  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/workflows/: release-api.yml
cmd/api/: main.go
cmd/engine/: main.go
cmd/seed/: main.go
internal/api/: server.go
internal/config/: config.go
internal/database/: database.go
internal/engine/: engine.go
internal/middleware/: auth.go
internal/models/: models.go
internal/response/: response.go
internal/router/: router.go
internal/version/: version.go
prisma/: schema.prisma  seed.mjs  seed.ts
scripts/: bump-and-push-release.sh  bump-client-version.sh  bump-server-version.sh  update-client-version.mjs
src/: proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: admin-login-form.tsx  admin-shell.tsx  admin-software-form.tsx  admin-software-row-actions.tsx  app-icons.tsx  landing-page.tsx  manifesto-page.tsx  mobile-nav.tsx  post-project-form.tsx  profile-setup-form.tsx  project-media.tsx  providers.tsx  roadmap-page.tsx  sign-in-card.tsx  (+5 more)
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
worker/: config.py  main.py  pyproject.toml
worker/core/: prompts.py
worker/db/: client.py  queries.py  schema.py  utils.py
worker/models/: schema.py
worker/pipeline/: cleaner.py  fetcher.py  runner.py  types.py
worker/pipeline/stages/: base_stage.py  stage1.py  stage2.py  stage3.py  stage4.py  types.py
worker/services/: llm.py
worker/utils/: cache.py  chunk.py  logger.py
(+162 files in other folders)
